@@ -1,6 +1,7 @@
 The Qedo Team
+http://qedo-berlios.de
 
 Harald Boehme <boehme@informatik.hu-berlin.de>
 Bertram Neubauer <neubauer@informatik.hu-berlin.de>
-Tom Ritter <ritter@fokus.fhg.de>
+Tom Ritter <ritter@fokus.fraunhofer.de>
 Frank Stoinski <stoinski@informatik.hu-berlin.de>
