@@ -1,3 +1,4 @@
+- vc7 project generator create subdirs for each project
 - new backend for CSD
 
 version 0.1.0
